--- a/2048.html
+++ b/2048.html
@@ -10,9 +10,9 @@
 	
 <table id="table">
 <tr>
-<td>   </td>
-<td>   </td>
-<td>   </td>
+<td id="first">   </td>
+<td >   </td>
+<td style="border-radius: 25px">   </td>
 </tr>
 
 <tr>
@@ -22,9 +22,9 @@
 </tr>
 
 <tr>
+<td style="border-radius: 25px">   </td>
 <td>   </td>
-<td>   </td>
-<td>   </td>
+<td style="border-radius: 25px">   </td>
 </tr>
 
 
