--- a/2048.html
+++ b/2048.html
@@ -8,11 +8,11 @@
 
 <body>
 	
-<table id="table">
+<table id="table" cellspacing="0">
 <tr>
 <td id="first">   </td>
 <td >   </td>
-<td style="border-radius: 25px">   </td>
+<td ">   </td>
 </tr>
 
 <tr>
@@ -22,9 +22,9 @@
 </tr>
 
 <tr>
-<td style="border-radius: 25px">   </td>
 <td>   </td>
-<td style="border-radius: 25px">   </td>
+<td>   </td>
+<td >   </td>
 </tr>
 
 
