--- a/2048.html
+++ b/2048.html
@@ -6,13 +6,35 @@
 
 </head>
 
-<body>
+<body background="static/background.png">
+
+<div style="text-align: -webkit-center;  ">
+<p style="font-size: 60px;color: grey ; padding: 15px ; ">
+
+2048
+
+
+</p>
+
+<div id="back">
+<p id="score" style="        font-size: 33px;
+    text-align: center;
+    color: white;
+    font-family: sans-serif;
+     ">
+Score Board
+
+</p>
+
+
+
+</div>
 	
 <table id="table" cellspacing="0">
 <tr>
-<td id="first">   </td>
+<td style="border-top-left-radius: 20px">   </td>
 <td >   </td>
-<td ">   </td>
+<td style="border-top-right-radius: 20px">   </td>
 </tr>
 
 <tr>
@@ -22,15 +44,27 @@
 </tr>
 
 <tr>
+<td style="border-bottom-left-radius: 20px">   </td>
 <td>   </td>
-<td>   </td>
-<td >   </td>
+<td style="border-bottom-right-radius: 20px">   </td>
 </tr>
 
 
 
 </table>
 
+</div>
+
+<div style="margin-top: 60px">
+<p style="font-size: 25px;
+   
+    text-align: end;
+    color: gray;
+    font-family: sans-serif;
+    padding: 10px;"> Designed By : Tushar Gupta<br>
+    Check out code at  : <a href="https://www.github.com/TUSHARZ/2048"> Github </a>
+</p>
+<div>
 
 
 </body>
