--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <body background="static/background.png">
 
 <div style="text-align: -webkit-center;  ">
-<p style="font-size: 60px;color: grey ; padding: 15px ; ">
+<p style="font-size: 50px;color: grey ; padding: 10px ; ; margin-bottom: 15px">
 
 2048
 
 
 </p>
-
+<div style="    display: inline-flex;
+    align-items: center;">
 <div id="back">
 <p id="score" style="        font-size: 33px;
     text-align: center;
@@ -26,6 +27,19 @@ Score Board
 
 </p>
 
+</div>
+<div id="back2" >
+<p id="reload" style="        font-size: 20px;
+    text-align: center;
+    color: white;
+    cursor: pointer;
+    font-family: sans-serif;
+     ">
+New Game
+</p>
+
+</div>
+
 
 
 </div>
@@ -34,20 +48,35 @@ Score Board
 <tr>
 <td style="border-top-left-radius: 20px">   </td>
 <td >   </td>
+<td>    </td>
 <td style="border-top-right-radius: 20px">   </td>
+
 </tr>
 
 <tr>
 <td>   </td>
 <td>   </td>
 <td>   </td>
+<td>   </td>
 </tr>
+
+<tr>
+<td>   </td>
+<td>   </td>
+<td>   </td>
+<td>   </td>
+</tr>
+
+
 
 <tr>
 <td style="border-bottom-left-radius: 20px">   </td>
 <td>   </td>
+<td>   </td>
 <td style="border-bottom-right-radius: 20px">   </td>
 </tr>
+
+
 
 
 
@@ -55,15 +84,16 @@ Score Board
 
 </div>
 
-<div style="margin-top: 60px">
+<div style="margin-top: 50px ;">
 <p style="font-size: 25px;
    
     text-align: end;
     color: gray;
     font-family: sans-serif;
-    padding: 10px;"> Designed By : Tushar Gupta<br>
-    Check out code at  : <a href="https://www.github.com/TUSHARZ/2048"> Github </a>
+    padding: 10px;"> Designed By : Tushar Gupta<br>Get Code at : <a href="https://www.github.com/TUSHARZ/2048"> Github </a>
 </p>
+
+
 <div>
 
 
