--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 </p>
 <div style="    display: inline-flex;
-    align-items: center;">
+    align-items: center;
+    margin-right: 100px">
 <div id="back">
 <p id="score" style="        font-size: 33px;
     text-align: center;
@@ -43,7 +44,12 @@ New Game
 
 
 </div>
-	
+</div>
+<div style="    display: flex;
+    align-items: center;
+    /* margin-left: 307px; */
+    justify-content: center;">
+<div style="    padding: 18px;">
 <table id="table" cellspacing="0">
 <tr>
 <td style="border-top-left-radius: 20px">   </td>
@@ -84,17 +90,54 @@ New Game
 
 </div>
 
-<div style="margin-top: 50px ;">
+<div style="    padding: 30px;">
+<table id="keys" >
+    <tr> 
+    <td> </td>
+    <td id="up" class="k"><img style="width: 40px;
+    height: 40px;" src="static/uparrow.png"> </td>
+    <td></td>
+
+
+    </tr>
+     <tr> 
+    <td id="left" class="k"><img style="width: 40px;
+    height: 40px;" src="static/leftarrow.png"></td>
+    <td></td>
+    <td id="right" class="k"><img style="width: 40px;
+    height: 40px;" src="static/rightarrow.png"></td>
+
+
+    </tr>
+     <tr> 
+    <td></td>
+    <td id="down" class="k"><img style="width: 40px;
+    height: 40px;" src="static/downarrow.png"></td>
+    <td></td>
+
+
+    </tr>
+    
+
+
+
+
+
+</table>
+
+</div>
+
+</div>
+<div style="display: flex ; justify-content: center;">
 <p style="font-size: 25px;
    
     text-align: end;
     color: gray;
     font-family: sans-serif;
-    padding: 10px;"> Designed By : Tushar Gupta<br>Get Code at : <a href="https://www.github.com/TUSHARZ/2048"> Github </a>
+    padding: 10px;"> Made By : Tushar Gupta<br>Get Code at : <a href="https://www.github.com/TUSHARZ/2048"> Github </a>
 </p>
 
 
-<div>
 
 
 </body>
