--- a/index.html
+++ b/index.html
@@ -136,7 +136,10 @@ New Game
     font-family: sans-serif;
     padding: 10px;"> Made By : Tushar Gupta<br>Get Code at : <a href="https://www.github.com/TUSHARZ/2048"> Github </a>
 </p>
-
+<b>
+	Hint :  Zoom out the window and use arrow keys to play 
+	</b>
+	
 
 
 
