--- a/index.html
+++ b/index.html
@@ -1,150 +1,92 @@
+<!DOCTYPE html>
 <html>
-
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="utf-8">
+  <title>2048</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
   <script type="text/javascript" src="static/script.js"></script>
-
 </head>
-
 <body background="static/background.png">
-
-<div style="text-align: -webkit-center;  ">
-<p style="font-size: 50px;color: grey ; padding: 10px ; ; margin-bottom: 15px">
-
-2048
-
-
-</p>
-<div style="    display: inline-flex;
-    align-items: center;
-    margin-right: 100px">
-<div id="back">
-<p id="score" style="        font-size: 33px;
-    text-align: center;
-    color: white;
-    font-family: sans-serif;
-     ">
-Score Board
-
-</p>
-
-</div>
-<div id="back2" >
-<p id="reload" style="        font-size: 20px;
-    text-align: center;
-    color: white;
-    cursor: pointer;
-    font-family: sans-serif;
-     ">
-New Game
-</p>
-
-</div>
-
-
-
-</div>
-</div>
-<div style="    display: flex;
-    align-items: center;
-    /* margin-left: 307px; */
-    justify-content: center;">
-<div style="    padding: 18px;">
-<table id="table" cellspacing="0">
-<tr>
-<td style="border-top-left-radius: 20px">   </td>
-<td >   </td>
-<td>    </td>
-<td style="border-top-right-radius: 20px">   </td>
-
-</tr>
-
-<tr>
-<td>   </td>
-<td>   </td>
-<td>   </td>
-<td>   </td>
-</tr>
-
-<tr>
-<td>   </td>
-<td>   </td>
-<td>   </td>
-<td>   </td>
-</tr>
-
-
-
-<tr>
-<td style="border-bottom-left-radius: 20px">   </td>
-<td>   </td>
-<td>   </td>
-<td style="border-bottom-right-radius: 20px">   </td>
-</tr>
-
-
-
-
-
-</table>
-
-</div>
-
-<div style="    padding: 30px;">
-<table id="keys" >
-    <tr> 
-    <td> </td>
-    <td id="up" class="k"><img style="width: 40px;
-    height: 40px;" src="static/uparrow.png"> </td>
-    <td></td>
-
-
-    </tr>
-     <tr> 
-    <td id="left" class="k"><img style="width: 40px;
-    height: 40px;" src="static/leftarrow.png"></td>
-    <td></td>
-    <td id="right" class="k"><img style="width: 40px;
-    height: 40px;" src="static/rightarrow.png"></td>
-
-
-    </tr>
-     <tr> 
-    <td></td>
-    <td id="down" class="k"><img style="width: 40px;
-    height: 40px;" src="static/downarrow.png"></td>
-    <td></td>
-
-
-    </tr>
-    
-
-
-
-
-
-</table>
-
-</div>
-
-</div>
-<div style="display: flex ; justify-content: center;">
-<p style="font-size: 25px;
-   
-    text-align: end;
-    color: gray;
-    font-family: sans-serif;
-    padding: 10px;"> Made By : Tushar Gupta<br>Get Code at : <a href="https://www.github.com/TUSHARZ/2048"> Github </a>
-</p>
-
-
-
-
+  <div style="text-align: -webkit-center; ">
+    <p style="font-size: 50px; color: grey; padding: 10px; margin-bottom: 15px;">
+      2048
+    </p>
+    <div style="display: inline-flex; align-items: center; margin-right: 100px">
+      <div id="back">
+        <p id="score" style="font-size: 33px; text-align: center; color: white; font-family: sans-serif;">
+          Score Board
+        </p>
+      </div>
+      <div id="back2">
+        <p id="reload" style="font-size: 20px; text-align: center; color: white; cursor: pointer; font-family: sans-serif;">
+          New Game
+        </p>
+      </div>
+    </div>
+  </div>
+  <div style="display: flex; align-items: center; /* margin-left: 307px; */ justify-content: center;">
+    <div style="padding: 18px;">
+      <table id="table" cellspacing="0">
+        <tr>
+          <td style="border-top-left-radius: 20px"> </td>
+          <td> </td>
+          <td> </td>
+          <td style="border-top-right-radius: 20px"> </td>
+        </tr>
+        <tr>
+          <td> </td>
+          <td> </td>
+          <td> </td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td> </td>
+          <td> </td>
+          <td> </td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td style="border-bottom-left-radius: 20px"> </td>
+          <td> </td>
+          <td> </td>
+          <td style="border-bottom-right-radius: 20px"> </td>
+        </tr>
+      </table>
+    </div>
+    <div style="padding: 30px;">
+      <table id="keys">
+        <tr>
+          <td> </td>
+          <td id="up" class="k">
+            <img style="width: 40px; height: 40px;" src="static/uparrow.png"> </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td id="left" class="k">
+            <img style="width: 40px; height: 40px;" src="static/leftarrow.png">
+          </td>
+          <td></td>
+          <td id="right" class="k">
+            <img style="width: 40px; height: 40px;" src="static/rightarrow.png">
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+          <td id="down" class="k">
+            <img style="width: 40px; height: 40px;" src="static/downarrow.png">
+          </td>
+          <td></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <div style="display: flex ; justify-content: center;">
+    <p style="font-size: 25px; text-align: end; color: gray; font-family: sans-serif; padding: 10px;">
+      Made By : Tushar Gupta
+      <br>
+      Get Code at :
+      <a href="https://www.github.com/TUSHARZ/2048"> Github</a>
+    </p>
+  </div>
 </body>
-
-
-
-
-
-
 </html>
