Adjusted style to make website look better
Made by statement now less intrusive and "New Game" should better fit the box

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Score Board
 
 </div>
 <div id="back2" >
-<p id="reload" style="        font-size: 20px;
+<p id="reload" style="        font-size: 22px;
     text-align: center;
     color: white;
     cursor: pointer;
@@ -129,10 +129,10 @@ New Game
 
 </div>
 <div style="display: flex ; justify-content: center;">
-<p style="font-size: 25px;
+<p style="font-size: 15px;
    
     text-align: end;
-    color: gray;
+    color: silver;
     font-family: sans-serif;
     padding: 10px;"> Made By : Tushar Gupta<br>Get Code at : <a href="https://www.github.com/TUSHARZ/2048"> Github </a>
 </p>
